@@ -1,0 +1,22 @@
+/* FIXME - need a validation query */
+STATEMENT_CONNECTION_VALIDATION_QUERY = 
+STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
+    CREATE CACHED TABLE jam_topic_version ( \
+      topic_version_id INTEGER NOT NULL, \
+      topic_id INTEGER NOT NULL, \
+      edit_comment VARCHAR(200), \
+      version_content LONGVARCHAR, \
+      wiki_user_id INTEGER, \
+      wiki_user_ip_address VARCHAR(39) NOT NULL, \
+      edit_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL, \
+      edit_type INTEGER NOT NULL, \
+      previous_topic_version_id INTEGER, \
+      characters_changed INTEGER, \
+      CONSTRAINT jam_p_topic_ver PRIMARY KEY (topic_version_id), \
+      CONSTRAINT jam_f_topicv_topic FOREIGN KEY (topic_id) REFERENCES jam_topic(topic_id), \
+      CONSTRAINT jam_f_topicv_wuser FOREIGN KEY (wiki_user_id) REFERENCES jam_wiki_user(wiki_user_id), \
+      CONSTRAINT jam_f_topicv_pver FOREIGN KEY (previous_topic_version_id) REFERENCES jam_topic_version(topic_version_id) \
+    )
+STATEMENT_CREATE_WIKI_USER_LOGIN_INDEX = \
+    /* FIXME - this should be "lower(login)", but H2 doesn't like functions in unique keys */ \
+    CREATE UNIQUE INDEX jam_u_wuser_login on jam_wiki_user (login) 
